--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <div class="main top-main">
   <div class="top-message">
-    <h1>Rakusma</h1>
-    <br></br>
-    <h2>何か買いましょう</h2>
+    
+    <br>
+    <br>
+    <br>
+    <h2>Rakusmaでお買い物をしましょう！</h2>
+    <%= link_to("ショッピングへ", "/products") %>
   </div>
 </div>
