--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -41,6 +41,7 @@ body {
   background-color: #DDDDDD;
   margin: 0;
   min-height: 1vh;
+  // margin-bottom: 50px;
 }
 
 /* ヘッダー ================================ */
