--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="form-heading">ログイン</div>
     <div class="form users-form">
-      <div class="form-body">
+      <div class="form-body">z
         <% if @error_message %>
           <div class="form-error">
             <%= @error_message %>
