--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,13 +3,14 @@
     <div class="form-heading">新規ユーザー登録</div>
       <div class="form users-form">
         <div class="form-body">
+
           <% @user.errors.full_messages.each do |message| %>
             <div class="form-error">
               <%= message %>
             </div>
           <% end %>
-          
-          <%= form_with model: @user, url: users_path do |f| %>
+
+          <%= form_with model: @user, local: true, url: users_path do |f| %>
             <p>ユーザー名</p>
             <%= f.text_field :name, size: 30 %>
             <p>メールアドレス</p>
