--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,12 @@
       <div class="form users-form">
         <div class="form-body">
           <% @user.errors.full_messages.each do |message| %>
+          message
+            <div class="form-error">
+              <%= message %>
+            </div>
+          <% end %>
+          <% @user.errors.full_messages.each do |message| %>
             <div class="form-error">
               <%= message %>
             </div>
