--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,21 +1,7 @@
-<h2>All Products</h2>
+<h2>Category</h2>
 
 <div>
-  <% @products.each do |product| %>
-    <p>======================================</p>
-    <p>Name: <%= product.name %></p>
-    <p>Price: <%= product.price %></p>
-    <p><%= image_tag @image_url_array[product.id] %></p>
-    <%= form_with model: @cart_item, url: add_item_path do |f| %>
-        <%= f.hidden_field :product_id, :value => product.id %>
-        <%= f.number_field :quantity, in: 1..100, step: 1 %>
-        <%= f.submit "add #{product.name} to cart"%>
-    <% end %>
-    <br>
+  <% @categories.each do |category| %>
+    <%= link_to "#{category.name}", "/category/#{category.id}" %>
   <% end %>
-  
 </div>
-
-<%= link_to "/carts/#{session[:cart_id]}", class: 'btn btn-default' do %>
-  <button class="btn btn-secondary btn-lg" >To Cart</button>
-<% end %>
